[package]
name = "simple8b"
version = "0.1.0"
authors = ["Martin Pittermann <martinp2250@gmail.com>", "i@user.tax"]
edition = "2021"
license = "MIT"
description = "Pack multiple u64 values into a single u64"
homepage = "https://github.com/user-tax-dev/simple8"
repository = "https://github.com/user-tax-dev/simple8"

[dependencies]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "transcode"
harness = false
